--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -17,22 +17,26 @@
         <div class="card rounded">
           <!-- <img class="card-img-top" src="#"> -->
           <div class="card-body">
-            <h5 class="card-title">Topic 1</h5>
-            <p class="card-text">Thoughtfully designed so you can spend less time thinking and more time doing.</p>
+            <h5 class="card-title"></h5>
+            <p class="card-text">“I travel not to go anywhere, but to go. I travel for travel’s sake. The great affair is to move.”<br>
+              ― Robert Louis Stevenson, Travels with a Donkey in the Cevennes</p>
           </div>
         </div>
         <div class="card rounded">
           <!-- <img class="card-img-top" src="#"> -->
           <div class="card-body">
-            <h5 class="card-title">Topic 2</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis itaque sit dolore, libero corrupti odit vel dolor optio.</p>
+            <h5 class="card-title"></h5>
+            <p class="card-text">"Do not follow where the path may lead. Go instead where there is no path, and leave a trail." <br>
+              ― Ralph Waldo Emerson
+            </p>
           </div>
         </div>
         <div class="card rounded">
           <!-- <img class="card-img-top" src="#"> -->
           <div class="card-body">
-            <h5 class="card-title">Topic 3</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis itaque sit dolore, libero corrupti odit vel dolor optio.</p>
+            <h5 class="card-title"></h5>
+            <p class="card-text">“We travel, some of us forever, to seek other states, other lives, other souls.” <br>
+              ― Anaïs Nin, The Diary of Anaïs Nin, Vol. 7: 1966-1974</p>
           </div>
         </div>
       </div>
