Changed some language

--- a/main_app/templates/locations/detail.html
+++ b/main_app/templates/locations/detail.html
@@ -80,7 +80,7 @@
             <p>It is recommended to visit {{location.location_name}} during the {{location.ideal_season}}.</p>
           {% endif %}
           <ul class="points-of-interests">
-            <h3 class="poi-header text-uppercase mt-5">{{location.location_name}}'s points of interest</h3>
+            <h3 class="poi-header text-uppercase mt-5">points of interest</h3>
             <li class="poi">
               {{location.poi_1}}
             </li>
